section_mid_4 mid_4_box1 complete

--- a/index.html
+++ b/index.html
@@ -466,6 +466,8 @@
                                 </div>
                             </div>
                         </div>
+                      </div>
+                      <div class="swiper-slide">
                         <div class="md4_slide_box slide_box_2">
                             <div class="md4_color flex flex-ai-c text-ai-c">
                                 <div class="md4_color_box"></div>
@@ -509,7 +511,9 @@
                                     <span>₩ 47,000</span>
                                 </div>
                             </div>
-                        </div>
+                        </div>                        
+                      </div>
+                      <div class="swiper-slide">
                         <div class="md4_slide_box slide_box_4">
                             <div class="md4_color"></div>
                             <div class="md4_img_box">
@@ -551,6 +555,8 @@
                                 </div>
                             </div>
                         </div>
+                      </div>
+                      <div class="swiper-slide">
                         <div class="md4_slide_box slide_box_6">
                             <div class="md4_color flex flex-ai-c text-ai-c">
                                 <div class="md4_color_box"></div>
@@ -599,6 +605,8 @@
                                 </div>
                             </div>
                         </div>
+                      </div>
+                      <div class="swiper-slide">
                         <div class="md4_slide_box slide_box_8">
                             <div class="md4_color flex flex-ai-c text-ai-c">
                                 <div class="md4_color_box"></div>
@@ -649,7 +657,7 @@
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                  </div>
+                </div>
             </div>
           </div>
         </div>
@@ -785,7 +793,7 @@
                     </div>
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
-                  </div>
+                </div>
             </div>
             </div>
             <div class="mid4_img">
